Bug #28287 Sign problem in test "ndb_restore_print"
Submitted: 7 May 2007 18:11 Modified: 15 May 2007 6:55
Reporter: Joerg Bruehe Email Updates:
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.0.40 + 5.1.18 OS:Linux (S/390 + PPC)
Assigned to: Tomas Ulin Target Version:

[7 May 2007 18:11] Joerg Bruehe
Description:
Test "ndb_restore_print" fails in (test) builds of 5.1.18
showing the difference below.

Happens on the hosts running Linux on a big-endian CPU:
Linux/390 + Linux/PPC,
so I suppose it is an issue with big-endian CPUs that show up only on Linux.

-------------------------------------------------------
*** r/ndb_restore_print.result
--- r/ndb_restore_print.reject
***************
*** 235,244
  <the_backup_id>
  DROP TABLE test.backup_info;
 
1;0x1;0x17;0x789A;0x789ABCDE;0xFEDC0001;127;255;32767;65535;2147483647;4294967295;9223372036854775807;1844674407370955161
5;1;12345678901234567890123456789012;123456789;1;12345678901234567890123456789012;123456789;0x12;0x123456789ABCDEF0;0x01234
5;0x12;0x123456789ABCDEF0;0x00123450
!
2;0x0;0x0;0x0;0x0;0x0;-128;0;-32768;0;-2147483648;0;-9223372036854775808;0;;;;;;;0x0;0x0;0x0;0x0;0x0;0x0
  3;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N
 
1,0x1,0x17,0x789A,0x789ABCDE,0xFEDC0001,127,255,32767,65535,2147483647,4294967295,9223372036854775807,1844674407370955161
5,'1','12345678901234567890123456789012','123456789','1','12345678901234567890123456789012','123456789',0x12,0x123456789ABC
DEF0,0x012345,0x12,0x123456789ABCDEF0,0x00123450
!
2,0x0,0x0,0x0,0x0,0x0,-128,0,-32768,0,-2147483648,0,-9223372036854775808,0,'','','','','','',0x0,0x0,0x0,0x0,0x0,0x0
  3,,,,,,,,,,,,,,,,,,,,,,,,,
  drop table t1;
  create table t1
--- 235,244
  <the_backup_id>
  DROP TABLE test.backup_info;
 
1;0x1;0x17;0x789A;0x789ABCDE;0xFEDC0001;127;255;32767;65535;2147483647;4294967295;9223372036854775807;1844674407370955161
5;1;12345678901234567890123456789012;123456789;1;12345678901234567890123456789012;123456789;0x12;0x123456789ABCDEF0;0x01234
5;0x12;0x123456789ABCDEF0;0x00123450
!
2;0x0;0x0;0x0;0x0;0x0;128;0;-32768;0;-2147483648;0;-9223372036854775808;0;;;;;;;0x0;0x0;0x0;0x0;0x0;0x0
  3;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N;\N
 
1,0x1,0x17,0x789A,0x789ABCDE,0xFEDC0001,127,255,32767,65535,2147483647,4294967295,9223372036854775807,1844674407370955161
5,'1','12345678901234567890123456789012','123456789','1','12345678901234567890123456789012','123456789',0x12,0x123456789ABC
DEF0,0x012345,0x12,0x123456789ABCDEF0,0x00123450
!
2,0x0,0x0,0x0,0x0,0x0,128,0,-32768,0,-2147483648,0,-9223372036854775808,0,'','','','','','',0x0,0x0,0x0,0x0,0x0,0x0
  3,,,,,,,,,,,,,,,,,,,,,,,,,
  drop table t1;
  create table t1
-------------------------------------------------------

How to repeat:
Build + test on one of these machines.
[9 May 2007 8:04] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26351

ChangeSet@1.2476, 2007-05-09 10:22:26+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #28287 Sign problem in test "ndb_restore_print"
  - some platforms do strange things with char... use Int8 to be sure of signedness
[9 May 2007 12:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26373

ChangeSet@1.2477, 2007-05-09 14:31:22+02:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #28287 Sign problem in test "ndb_restore_print"
    - corrected previous patch
    - some platforms do strange things with char... use Int8 to be sure of signedness
[10 May 2007 12:56] Bugs System
Pushed into 5.0.42
[10 May 2007 12:57] Bugs System
Pushed into 5.1.19-beta
[15 May 2007 6:55] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Appears no user-visible changes to document, closed without taking further action.