Bug #28287 Sign problem in test "ndb_restore_print" - some platforms do strange things with char... use Int8 to be sure of signedness